// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Base Layout renders correctly 1`] = `
<main>
  <span>
    Test
  </span>
</main>
`;

exports[`Base Layout renders correctly 2`] = `
<html
  lang="en"
>
  <head>
    <meta
      content="Test Site"
      data-rh={true}
      property="og:title"
    />
    <title
      data-rh={true}
    >
      Test Site
    </title>
  </head>
  <body />
</html>
`;

exports[`Base Layout renders correctly with metadata provided 1`] = `
<main>
  <script
    type="application/ld+json"
  >
    Object {
    "@context": "https://schema.org",
    "@type": "BreadcrumbList",
    "itemListElement": Array [
      Object {
        "@type": "ListItem",
        "item": Object {
          "@id": "https://example.dev/",
          "@type": "WebPage",
          "name": "Test Site",
        },
        "position": 1,
      },
      Object {
        "@type": "ListItem",
        "item": Object {
          "@id": "https://example.dev/2016-11-9-test-post",
          "@type": "WebPage",
          "name": "Test Post",
        },
        "position": 2,
      },
    ],
  }
  </script>
  <span>
    Test
  </span>
</main>
`;

exports[`Base Layout renders correctly with metadata provided 2`] = `
<html
  lang="en"
>
  <head>
    <meta
      content="Test Post | Test Site"
      data-rh={true}
      property="og:title"
    />
    <title
      data-rh={true}
    >
      Test Post | Test Site
    </title>
  </head>
  <body />
</html>
`;
